name:            yesod
version:         0.7.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Creation of type-safe, RESTful web applications.
description:
    Yesod is a framework designed to foster creation of RESTful web application that have strong compile-time guarantees of correctness. It also affords space efficient code and portability to many deployment backends, from CGI to stand-alone serving.
    .
    The Yesod documentation site <http://docs.yesodweb.com/> has much more information, tutorials and information on some of the supporting packages, like Hamlet and web-routes-quasi.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/
extra-source-files: scaffold/*.cg

flag ghc7

flag production
    Description: Skip the wai-handler-devel and hint dependencies.
    Default:     False

library
    if flag(production)
        cpp-options: -DPRODUCTION
    else
        build-depends: wai-handler-devel   >= 0.2      && < 0.3
    if flag(ghc7)
        build-depends:   base                  >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                  >= 4        && < 4.3
    build-depends:   yesod-core                >= 0.7.0.1  && < 0.8
                   , yesod-auth                >= 0.3      && < 0.4
                   , yesod-json                >= 0.0.0.1  && < 0.1
                   , yesod-persistent          >= 0.0.0.1  && < 0.1
                   , yesod-static              >= 0.0      && < 0.1
                   , yesod-form                >= 0.0.0.1  && < 0.1
                   , monad-peel                >= 0.1      && < 0.2
                   , transformers              >= 0.2      && < 0.3
                   , wai                       >= 0.3      && < 0.4
                   , wai-extra                 >= 0.3.2    && < 0.4
                   , hamlet                    >= 0.7.1    && < 0.8
                   , warp                      >= 0.3.2.1  && < 0.4
                   , mime-mail                 >= 0.1.0.1  && < 0.2
                   , hjsmin                    >= 0.0.12   && < 0.1
                   , attoparsec-text           >= 0.8.2.1  && < 0.9
    exposed-modules: Yesod
    ghc-options:     -Wall

executable             yesod
    if flag(ghc7)
        build-depends:   base                  >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                  >= 4        && < 4.3
    build-depends:     parsec             >= 2.1          && < 4
                     , text               >= 0.11         && < 0.12
                     , bytestring         >= 0.9          && < 0.10
                     , time               >= 1.1.4        && < 1.3
                     , template-haskell
                     , directory          >= 1.0          && < 1.2
    ghc-options:       -Wall
    main-is:           scaffold.hs
    other-modules:     CodeGen
    extensions:        TemplateHaskell
    if flag(ghc7)
        cpp-options:     -DGHC7

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesod.git
