name:            authenticate-oauth
version:         1.2.0
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Hiromi Ishii
synopsis:        Authentication methods for Haskell web applications.
description:     OAuth authentication, e.g. Twitter.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base                          >= 4        && < 5
                   , http-conduit                  >= 1.3      && < 1.4
                   , transformers                  >= 0.1      && < 0.3
                   , bytestring                    >= 0.9
                   , RSA                           >= 1.0      && < 1.1
                   , time
                   , data-default                  >= 0.3      && < 0.4
                   , base64-bytestring             >= 0.1      && < 0.2
                   , SHA                           >= 1.4      && < 1.6
                   , random
                   , http-types                    >= 0.6      && < 0.7
                   , blaze-builder
                   , conduit                       >= 0.3      && < 0.4
                   , blaze-builder-conduit         >= 0.3      && < 0.4
                   , monad-control                 >= 0.3      && < 0.4
    exposed-modules: Web.Authenticate.OAuth, Web.Authenticate.OAuth.IO
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
