
name:            authenticate-oauth
version:         1.4.0.3
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Hiromi Ishii
synopsis:        Library to authenticate with OAuth for Haskell web applications.
description:     OAuth authentication, e.g. Twitter.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base                          >= 4        && < 5
                   , http-conduit                  >= 1.4      && < 1.9
                   , transformers                  >= 0.1      && < 0.4
                   , bytestring                    >= 0.9
                   , crypto-pubkey-types           >= 0.1      && < 0.3
                   , RSA                           >= 1.2      && < 1.3
                   , time
                   , data-default
                   , base64-bytestring             >= 0.1      && < 1.1
                   , SHA                           >= 1.4      && < 1.7
                   , random
                   , http-types                    >= 0.6      && < 0.8
                   , blaze-builder
                   , conduit                       >= 0.4      && < 0.6
                   , resourcet                     >= 0.3      && < 0.5
                   , blaze-builder-conduit         >= 0.4      && < 0.6
                   , monad-control                 >= 0.3      && < 0.4
    exposed-modules: Web.Authenticate.OAuth, Web.Authenticate.OAuth.IO
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
