name:            authenticate
version:         1.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman, Hiromi Ishii, Arash Rouhani
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication methods for Haskell web applications.
description:     Focus is on third-party authentication methods, such as OpenID and BrowserID.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base                          >= 4        && < 5
                   , aeson                         >= 0.5
                   , http-conduit                  >= 1.2      && < 1.3
                   , tagsoup                       >= 0.12     && < 0.13
                   , transformers                  >= 0.1      && < 0.3
                   , bytestring                    >= 0.9
                   , network
                   , case-insensitive              >= 0.2
                   , text
                   , http-types                    >= 0.6      && < 0.7
                   , xml-conduit                   >= 0.5.1.2  && < 0.6
                   , blaze-builder
                   , attoparsec
                   , containers
                   , unordered-containers
                   , conduit                       >= 0.2      && < 0.3
                   , blaze-builder-conduit         >= 0.2      && < 0.3
    exposed-modules: Web.Authenticate.Rpxnow,
                     Web.Authenticate.OpenId,
                     Web.Authenticate.BrowserId,
                     Web.Authenticate.OpenId.Providers
    other-modules:   Web.Authenticate.Internal,
                     OpenId2.Discovery,
                     OpenId2.Normalization,
                     OpenId2.Types,
                     OpenId2.XRDS
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
