name:            yaml
version:         0.7.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>, Anton Ageev <antage@gmail.com>,Kirill Simonov 
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Low-level binding to the libyaml C library.
description:     Provides support for parsing and emitting Yaml documents.
                 .
                 This package includes the full libyaml C library version 0.1.2 by Kirill
                 Simonov (<http://pyyaml.org/wiki/LibYAML>) in the package so you
                 don't need to worry about any non-Haskell dependencies.
category:        Web
stability:       unstable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/snoyberg/yaml/
extra-source-files: c/helper.h,
                    libyaml/yaml_private.h,
                    libyaml/yaml.h,
		            libyaml/LICENSE
                    test/main.hs
                    test/largest-string.yaml

flag system-libyaml
  description: Use the system-wide libyaml instead of the bundled copy
  default: False

library
    build-depends:   base >= 4 && < 5
                   , transformers >= 0.1 && < 0.3
                   , bytestring >= 0.9.1.4 && < 0.10
                   , conduit >= 0.4 && < 0.5
                   , resourcet >= 0.3 && < 0.4
                   , aeson >= 0.5
                   , containers
                   , unordered-containers
                   , vector
                   , text
                   , attoparsec
    exposed-modules: Text.Libyaml
                     Data.Yaml
    ghc-options:     -Wall
    c-sources:       c/helper.c
    include-dirs:    c
    if flag(system-libyaml)
            pkgconfig-depends: yaml-0.1
    else
            c-sources:       libyaml/api.c,
                             libyaml/dumper.c,
                             libyaml/emitter.c,
                             libyaml/loader.c,
                             libyaml/parser.c,
                             libyaml/reader.c,
                             libyaml/scanner.c,
                             libyaml/writer.c
            include-dirs:    libyaml

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         main.hs
    cpp-options:     -DTEST
    build-depends:   hspec
                   , HUnit
                   , directory
                   , base >= 4 && < 5
                   , transformers >= 0.1 && < 0.3
                   , bytestring >= 0.9.1.4 && < 0.10
                   , conduit
                   , yaml
                   , text
                   , unordered-containers
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/snoyberg/yaml
