name:            yesod-auth-oauth
version:         1.3.0
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Michael Litchard
synopsis:        OAuth Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Oauth Authentication for Yesod.

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4         && < 4.3
    build-depends:   authenticate-oauth      >= 1.5       && < 1.6
                   , bytestring              >= 0.9.1.4
                   , yesod-core              >= 1.2       && < 1.3
                   , yesod-auth              >= 1.3       && < 1.4
                   , text                    >= 0.7
                   , yesod-form              >= 1.3       && < 1.4
                   , transformers            >= 0.2.2     && < 0.5
                   , lifted-base             >= 0.2       && < 0.3
    exposed-modules: Yesod.Auth.OAuth
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
