name:            yesod-auth-oauth
version:         1.6.0.1
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Michael Litchard
synopsis:        OAuth Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-auth-oauth>
extra-source-files: README.md ChangeLog.md

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4         && < 4.3
    build-depends:   authenticate-oauth      >= 1.5       && < 1.7
                   , bytestring              >= 0.9.1.4
                   , text                    >= 0.7
                   , unliftio
                   , yesod-auth              >= 1.6       && < 1.7
                   , yesod-core              >= 1.6       && < 1.7
                   , yesod-form              >= 1.6       && < 1.7
    exposed-modules: Yesod.Auth.OAuth
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
