cabal-version:   >= 1.10
name:            yesod-auth-oauth
version:         1.6.0.3
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Michael Litchard
synopsis:        OAuth Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-auth-oauth>
extra-source-files: README.md ChangeLog.md

library
    default-language: Haskell2010
    build-depends:   authenticate-oauth      >= 1.5       && < 1.8
                   , base                    >= 4.10      && < 5
                   , bytestring              >= 0.9.1.4
                   , text                    >= 0.7
                   , unliftio
                   , yesod-auth              >= 1.6       && < 1.7
                   , yesod-core              >= 1.6       && < 1.7
                   , yesod-form              >= 1.6       && < 1.8
    exposed-modules: Yesod.Auth.OAuth
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
