name:            yesod-auth
version:         1.3.2
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:
    This package provides a pluggable mechanism for allowing users to authenticate with your site. It comes with a number of common plugins, such as OpenID, BrowserID (a.k.a., Mozilla Persona), and email. Other packages are available from Hackage as well. If you've written such an add-on, please notify me so that it can be added to this description.
   .
   * <http://hackage.haskell.org/package/yesod-auth-account>: An account authentication plugin for Yesod
   .
   * <http://hackage.haskell.org/package/yesod-auth-hashdb>: The HashDB module previously packaged in yesod-auth, now with stronger, but compatible, security.
   .
   * <https://github.com/ollieh/yesod-auth-bcrypt/>: An alternative to the HashDB module.
extra-source-files: persona_sign_in_blue.png

library
    build-depends:   base                    >= 4         && < 5
                   , authenticate            >= 1.3
                   , bytestring              >= 0.9.1.4
                   , yesod-core              >= 1.2       && < 1.3
                   , wai                     >= 1.4
                   , template-haskell
                   , base16-bytestring
                   , cryptohash
                   , random                  >= 1.0.0.2
                   , text                    >= 0.7
                   , mime-mail               >= 0.3
                   , yesod-persistent        >= 1.2
                   , hamlet                  >= 1.1
                   , shakespeare
                   , shakespeare-css         >= 1.0
                   , shakespeare-js          >= 1.0.2
                   , containers
                   , unordered-containers
                   , yesod-form              >= 1.3       && < 1.4
                   , transformers            >= 0.2.2
                   , persistent              >= 1.2       && < 1.4
                   , persistent-template     >= 1.2       && < 1.4
                   , http-conduit            >= 1.5
                   , aeson                   >= 0.5
                   , lifted-base             >= 0.1
                   , blaze-html              >= 0.5
                   , blaze-markup            >= 0.5.1
                   , network
                   , http-types
                   , file-embed
                   , email-validate          >= 1.0
                   , data-default
                   , resourcet
                   , safe
                   , time
                   , base64-bytestring
                   , byteable
                   , binary
                   , http-client
                   , blaze-builder
                   , conduit
                   , conduit-extra
                   , attoparsec-conduit

    exposed-modules: Yesod.Auth
                     Yesod.Auth.BrowserId
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.OpenId
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.Message
                     Yesod.Auth.GoogleEmail
                     Yesod.Auth.GoogleEmail2
    other-modules:   Yesod.Auth.Routes
                     Yesod.PasswordStore
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
