name:            yesod-auth
version:         1.4.13.4
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-auth>
extra-source-files: persona_sign_in_blue.png
                    README.md
                    ChangeLog.md

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
    build-depends:   base                    >= 4         && < 5
                   , authenticate            >= 1.3
                   , bytestring              >= 0.9.1.4
                   , yesod-core              >= 1.4.20    && < 1.5
                   , wai                     >= 1.4
                   , template-haskell
                   , base16-bytestring
                   , cryptohash
                   , random                  >= 1.0.0.2
                   , text                    >= 0.7
                   , mime-mail               >= 0.3
                   , yesod-persistent        >= 1.4
                   , shakespeare
                   , containers
                   , unordered-containers
                   , yesod-form              >= 1.4       && < 1.5
                   , transformers            >= 0.2.2
                   , persistent              >= 2.1       && < 2.7
                   , persistent-template     >= 2.1       && < 2.7
                   , http-client
                   , http-conduit            >= 2.1
                   , aeson                   >= 0.7
                   , lifted-base             >= 0.1
                   , blaze-html              >= 0.5
                   , blaze-markup            >= 0.5.1
                   , http-types
                   , file-embed
                   , email-validate          >= 1.0
                   , data-default
                   , resourcet
                   , safe
                   , time
                   , base64-bytestring
                   , byteable
                   , binary
                   , http-client
                   , blaze-builder
                   , conduit
                   , conduit-extra
                   , nonce                   >= 1.0.2     && < 1.1

    if flag(network-uri)
      build-depends: network-uri >= 2.6
    else
      build-depends: network < 2.6

    exposed-modules: Yesod.Auth
                     Yesod.Auth.BrowserId
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.OpenId
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.Message
                     Yesod.Auth.GoogleEmail
                     Yesod.Auth.GoogleEmail2
                     Yesod.Auth.Hardcoded
    other-modules:   Yesod.Auth.Routes
                     Yesod.PasswordStore
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
