name:            yesod-auth
version:         1.6.8
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Authentication for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-auth>
extra-source-files: persona_sign_in_blue.png
                    README.md
                    ChangeLog.md

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
    build-depends:   base                    >= 4         && < 5
                   , aeson                   >= 0.7
                   , authenticate            >= 1.3.4
                   , base16-bytestring
                   , base64-bytestring
                   , binary
                   , blaze-builder
                   , blaze-html              >= 0.5
                   , blaze-markup            >= 0.5.1
                   , bytestring              >= 0.9.1.4
                   , conduit                 >= 1.3
                   , conduit-extra
                   , containers
                   , cryptonite
                   , data-default
                   , email-validate          >= 1.0
                   , file-embed
                   , http-client             >= 0.5
                   , http-client-tls
                   , http-conduit            >= 2.1
                   , http-types
                   , memory
                   , nonce                   >= 1.0.2     && < 1.1
                   , persistent              >= 2.8       && < 2.11
                   , random                  >= 1.0.0.2
                   , safe
                   , shakespeare
                   , template-haskell
                   , text                    >= 0.7
                   , time
                   , transformers            >= 0.2.2
                   , unliftio
                   , unliftio-core
                   , unordered-containers
                   , wai                     >= 1.4
                   , yesod-core              >= 1.6       && < 1.7
                   , yesod-form              >= 1.6       && < 1.7
                   , yesod-persistent        >= 1.6

    if flag(network-uri)
      build-depends: network-uri >= 2.6

    exposed-modules: Yesod.Auth
                     Yesod.Auth.BrowserId
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.OpenId
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.Message
                     Yesod.Auth.GoogleEmail2
                     Yesod.Auth.Hardcoded
                     Yesod.Auth.Util.PasswordStore
    other-modules:   Yesod.Auth.Routes
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
