name:            yesod-bin
version:         1.5.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        The yesod helper executable.
description:     See README.md for more information
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/

extra-source-files:
  README.md
  ChangeLog.md
  refreshing.html
  *.pem

executable             yesod
    if os(windows)
        cpp-options:     -DWINDOWS
    if os(openbsd)
        ld-options:      -Wl,-zwxneeded

    build-depends:     base               >= 4.3          && < 5
                     , parsec             >= 2.1          && < 4
                     , text               >= 0.11
                     , shakespeare        >= 2.0
                     , bytestring         >= 0.9.1.4
                     , time               >= 1.1.4
                     , template-haskell
                     , directory          >= 1.2.1
                     , Cabal              >= 1.18
                     , unix-compat        >= 0.2          && < 0.5
                     , containers         >= 0.2
                     , attoparsec         >= 0.10
                     , http-types         >= 0.7
                     , blaze-builder      >= 0.2.1.4      && < 0.5
                     , filepath           >= 1.1
                     , process
                     , zlib               >= 0.5
                     , tar                >= 0.4          && < 0.6
                     , unordered-containers
                     , yaml               >= 0.8          && < 0.9
                     , optparse-applicative >= 0.11
                     , fsnotify           >= 0.0          && < 0.3
                     , split              >= 0.2          && < 0.3
                     , file-embed
                     , conduit            >= 1.2
                     , conduit-extra
                     , resourcet          >= 0.3          && < 1.2
                     , base64-bytestring
                     , lifted-base
                     , http-reverse-proxy >= 0.4
                     , network            >= 2.5
                     , http-client-tls
                     , http-client        >= 0.4.7
                     , project-template   >= 0.1.1
                     , safe-exceptions
                     , say
                     , stm
                     , transformers
                     , transformers-compat
                     , warp               >= 1.3.7.5
                     , wai                >= 2.0
                     , wai-extra
                     , data-default-class
                     , streaming-commons
                     , warp-tls           >= 3.0.1
                     , async
                     , deepseq
                     , typed-process

    ghc-options:       -Wall -threaded -rtsopts
    main-is:           main.hs
    other-modules:     Devel
                       Build
                       Keter
                       AddHandler
                       Paths_yesod_bin
                       Options
                       HsFile

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
