name:            yesod-bin
version:         1.6.2.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        The yesod helper executable.
description:     See README.md for more information
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://www.yesodweb.com/

extra-source-files:
  README.md
  ChangeLog.md
  refreshing.html
  *.pem

executable             yesod
    default-language: Haskell2010
    if os(windows)
        cpp-options:     -DWINDOWS
    if os(openbsd)
        ld-options:      -Wl,-zwxneeded

    build-depends:     base               >= 4.10         && < 5
                     , Cabal              >= 1.18
                     , bytestring         >= 0.9.1.4
                     , conduit            >= 1.3
                     , conduit-extra      >= 1.3
                     , containers         >= 0.2
                     , data-default-class
                     , directory          >= 1.2.1
                     , file-embed
                     , filepath           >= 1.1
                     , fsnotify           >= 0.0          && < 0.4
                     , http-client        >= 0.4.7
                     , http-client-tls
                     , http-reverse-proxy >= 0.4
                     , http-types         >= 0.7
                     , network            >= 2.5
                     , optparse-applicative >= 0.11
                     , process
                     , project-template   >= 0.1.1
                     , say
                     , split              >= 0.2          && < 0.3
                     , stm
                     , streaming-commons
                     , tar                >= 0.4          && < 0.6
                     , text               >= 0.11
                     , time               >= 1.1.4
                     , transformers
                     , transformers-compat
                     , unliftio
                     , unordered-containers
                     , wai                >= 2.0
                     , wai-extra
                     , warp               >= 1.3.7.5
                     , warp-tls           >= 3.0.1
                     , yaml               >= 0.8          && < 0.12
                     , zlib               >= 0.5
                     , aeson

    ghc-options:       -Wall -threaded -rtsopts
    main-is:           main.hs
    other-modules:     Devel
                       Keter
                       AddHandler
                       Paths_yesod_bin
                       Options
                       HsFile

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
